--- a/css/styles.css
+++ b/css/styles.css
@@ -79,9 +79,12 @@ address {
   cursor: pointer;
 }
 
-.project-filter:focus,
-.project-filter:hover {
-  color: var(--accent-color);
+.project-filter-button:focus,
+.project-filter-button:hover {
+  background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  color: #ffffff;
 }
 
 .section-title {
